--- a/assets/main.css
+++ b/assets/main.css
@@ -1,15 +1,14 @@
 div{
     border: 3px black solid;
 }
-img{
-    border: 1px red solid;
-}
 
 .window{
     display: grid;
 
-    grid-template-columns: 40% 13% 30% 13%;
-    grid-template-rows: 200px 200px 200px 200px;
+    width: 1100px;
+
+    grid-template-columns: auto 100px 300px 100px;
+    grid-template-rows: 100px 100px 100px 100px;
 
     grid-template-areas: 
     "flex1 armor1 nothing weapon1"
@@ -94,4 +93,8 @@ img{
 .weapon2{
     grid-area: weapon2;
     background-color: rgb(209, 209, 209);
+}
+
+.weapon1 img, .weapon2 img{
+    width: 100%;
 }
