--- a/assets/main.css
+++ b/assets/main.css
@@ -1,11 +1,14 @@
-div{
+/*div{
     border: 3px black solid;
-}
+}*/
+/*img:hover{
+    background-color: rgb(151, 126, 95);
+}*/
 
 .window{
     display: grid;
 
-    width: 1100px;
+    width: 1200px;
 
     grid-template-columns: auto 100px 300px 100px;
     grid-template-rows: 100px 100px 100px 100px;
@@ -17,6 +20,31 @@ div{
     "flex4 armor4 nothing weapon2";
 
     gap: 20px;
+
+    padding: 20px;
+
+    border: solid 5px white;
+    border-bottom: solid 5px darkgray;
+    border-right: solid 5px darkgray;
+
+    border-radius: 10px;
+
+    box-shadow: 0px 0px 0px 2px black;
+
+    background-color: lightgrey;
+}
+
+.window>div{
+    background-color: grey;
+
+    border: solid 2px white;
+    border-top: solid 2px black;
+    border-left: solid 2px black;
+}
+
+div>img:hover{
+    /*box-shadow: 1px 1px 5px 2px rgba(255, 255, 255, 0.65);*/
+    filter: drop-shadow(5px 5px 5px black); /*képekre szűrő*/
 }
 
 .flex1{
@@ -79,7 +107,8 @@ div{
 
 .nothing{
     grid-area: nothing;
-    background-color: grey;
+    background-color: black;
+    border-radius: 3px;
 }
 
 .weapon1{
