--- a/assets/main.css
+++ b/assets/main.css
@@ -14,6 +14,60 @@ img{
     height: 100px;
 }
 
+dialog>form>header>h1{
+    font-size: 32px;
+    margin: 5px;
+    padding: 0;
+
+    color: grey;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+dialog{
+    /*display: flex;*/
+    padding: 20px;
+    padding-top: 0;
+
+    border: solid 5px white;
+    border-bottom: solid 5px darkgray;
+    border-right: solid 5px darkgray;
+    border-radius: 10px;
+
+    box-shadow: 0px 0px 0px 2px black;
+    background-color: lightgrey;
+    outline: 0;
+}
+dialog>form>section{
+    display: grid;
+    grid-template-columns: repeat(6, 60px);
+    grid-template-rows: repeat(2, 60px);
+
+    gap: 5px;
+}
+dialog>form>section>img{
+    width: 60px;
+    height: 60px;
+    background-color: grey;
+
+    border: solid 2px white;
+    border-top: solid 2px black;
+    border-left: solid 2px black;
+}
+form>footer{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin-top: 10px;
+}
+
+form>footer>input{
+    width: 50%;
+    padding: 5px;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 26px;
+    font-weight: bolder;
+}
+
 .window{
     display: grid;
 
